# ml_learning

./: folders_structure.json  nada.py  pyproject.toml  soja_producao_model.pth  soja_producao_scalerX.pth  soja_producao_scalerY.pth
src/emater_data_science/: main.py
src/emater_data_science/data/: data_interface.py
src/emater_data_science/data/api_data/: api_data_interface.py  api_request_manager.py  api_request_model.py  bc_cotação_dollar.py  bc_credito_rural.py  bc_selic.py  first_generate_inmet_diario.py  first_request_data.py  generic_api_fetcher.py
src/emater_data_science/data/database_data/: central_database_connection.py  database_data_interface.py  database_logger_manager.py
src/emater_data_science/features/: feature_controller.py  feature_ui_builder.py
src/emater_data_science/features/api request/: generate_folder_structure.py
src/emater_data_science/features/api request/apis/: abstract_build_api_metadata.py  (+4 more)
src/emater_data_science/features/graph_visualization/: graph_settings.py  graph_visualization_controller.py  graph_visualization_main_ui.py
src/emater_data_science/features/ml_training/: correlation_table.py  first_selic.py  fourth_weather.py  lista_cidades_coordenada.py  print_correlation_matrix.py  pytorch_neural.py  random_forest.py  second_dollar.py  third_credito.py
src/emater_data_science/logging/: log_in_disk.py  logging_table_model.py  new.py
src/emater_data_science/main_navigation_control/: feature_controllers_dict.py  navigation_control_main_controller.py  navigation_control_main_ui.py
src/emater_data_science/tests/: empty_page.py  tests_controller.py  tests_main_ui.py
src/python_estudo/: main.py
src/python_estudo/data/: data_interface.py  validade_windows_path.py
src/python_estudo/data/api_data/: api_data_interface.py  generic_api_fetcher.py
src/python_estudo/data/csv_data/: csv_data_interface.py  generic_csv_fetcher.py
src/python_estudo/data/database_data/: database_data_interface.py  generic_sqlalchemy_fetcher.py
src/python_estudo/feature_graph_visualization/: graph_visualization_controller.py  graph_visualization_main_ui.py
src/python_estudo/feature_graph_visualization/visual_interface/: example_graph.py  example_table.py
src/python_estudo/main_navigation_control/: main_theme.py  navigation_control_main_controller.py  navigation_control_main_ui.py
src/python_estudo/models/: base_feature_controller.py  base_feature_ui.py  changenotifier.py  table_filter.py  ui_button_data_model.py
src/python_estudo/tests/: tests_controller.py  tests_main_ui.py
(+19 files in other folders)
