[tool.poetry]
name = "emater_data_science"
version = "1.0.0"
packages = [
    { include = "emater_data_science", from = "src" }
]
description = "A project for downloading data and creating ML models from it."
authors = ["Anderson Gonçalves de Oliveira"]

[build-system]
requires = ["poetry>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
aiohttp = "^3.8"
python = "^3.12"
polars = "^1.24"
numpy = "^2.2"
matplotlib = "^3.10"
scikit-learn = "^1.2"
SQLAlchemy = "^2.0"
pydantic = "^2.10"



[tool.poetry.group.dev.dependencies]
pytest = "^8.3"


[tool.poetry.scripts]
run-script = "emater_data_science.main:run"

[tool.mypy]
strict = true

