[tool.poetry]
name = "emater_data_science"
version = "1.0.0"
packages = [
    { include = "emater_data_science", from = "src" }
]
description = "A project for downloading data and creating ML models from it."
authors = ["Anderson Gonçalves de Oliveira"]

[build-system]
requires = ["poetry>=2.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
aiohttp = "^3.11"
python = "^3.12"
polars = "^1.26"
numpy = "^2.2"
matplotlib = "^3.10"
scikit-learn = "^1.6"
SQLAlchemy = "^2.0"
pydantic = "^2.11"
inmet-bdmep-fetcher = {git = "https://github.com/dankkom/inmet-bdmep-data.git"}
sidrapy = {git = "https://github.com/AlanTaranti/sidrapy.git"}
psutil = "^7.0.0"
torch = { version = "^2.6.0+cu126", source = "pytorch-cu126" }
torchvision = { version = "^0.21.0", source = "pytorch-cu126" }
torchaudio = { version = "^2.6.0", source = "pytorch-cu126" }
tabulate = "^0.9.0"



[tool.poetry.group.dev.dependencies]
pytest = "^8.3"


[tool.poetry.scripts]
run-script = "emater_data_science.main:run"

[tool.mypy]
strict = true

[[tool.poetry.source]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

